--- a/index.html
+++ b/index.html
@@ -53,37 +53,37 @@
                 <div class="proj-content">
                     <div class="proj-item">
                         <div class="img-item">
-                            <a href="/project-name.html"><img class="img-proj" src="images/01.png" alt=""></a>
+                            <a href="./project-name.html"><img class="img-proj" src="images/01.png" alt=""></a>
                         </div>
                         <h2 class="proj-title">Gaming streaming portal</h2>
                     </div>
                     <div class="proj-item">
                         <div class="img-item">
-                            <a href="/project-name.html"><img class="img-proj" src="images/02.png" alt=""></a>
+                            <a href="./project-name.html"><img class="img-proj" src="images/02.png" alt=""></a>
                         </div>
                         <h2 class="proj-title">Video service</h2>
                     </div>
                     <div class="proj-item">
                         <div class="img-item">
-                            <a href="/project-name.html"><img class="img-proj" src="images/03.png" alt=""></a>
+                            <a href="./project-name.html"><img class="img-proj" src="images/03.png" alt=""></a>
                         </div>
                         <h2 class="proj-title">Video portal</h2>
                     </div>
                     <div class="proj-item">
                         <div class="img-item">
-                            <a href="/project-name.html"><img class="img-proj" src="images/04.png" alt=""></a>
+                            <a href="./project-name.html"><img class="img-proj" src="images/04.png" alt=""></a>
                         </div>
                         <h2 class="proj-title">Video portal</h2>
                     </div>
                     <div class="proj-item">
                         <div class="img-item">
-                            <a href="/project-name.html"><img class="img-proj" src="images/05.png" alt=""></a>
+                            <a href="./project-name.html"><img class="img-proj" src="images/05.png" alt=""></a>
                         </div>
                         <h2 class="proj-title">Landing</h2>
                     </div>
                     <div class="proj-item">
                         <div class="img-item">
-                            <a href="/project-name.html"><img class="img-proj" src="images/06.png" alt=""></a>
+                            <a href="./project-name.html"><img class="img-proj" src="images/06.png" alt=""></a>
                         </div>
                         <h2 class="proj-title">Gaming community</h2>
                     </div>
